--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <link rel="icon" href="/favicon.ico">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>Portal UCI</title>
+      <title>Portal UCII</title>
       <link id="theme-css" rel="stylesheet" type="text/css" href="/themes/luna-green/theme.css">
 </head>
 
